Fixes for cola bug https://bugs.eclipse.org/bugs/show_bug.cgi?id=234142